[FIX] point_of_sale: do not always change rtl direction in receipt
Previous fix c0a9e2b was too broad, the issue was only when qty > 1, but the css
rule also applied for the simple case where quantity = 1 (that case was
displayed fine before that commit).

steps to reproduce:
- set current user language to arabic
- open the point of sale
- sell a product on the point of sale with a qty = 1
- pay and print receipt

To understand the issue, it's easier to look at the screenshots attached on PR.

before this commit:
- layout is broken for order lines

after this commit:
- order line layout is not broken

opw-3643485

X-original-commit: 5dcdc4e5797ef593806b6676916c7227207d1c4b

--- a/addons/point_of_sale/static/src/css/pos_receipts.css
+++ b/addons/point_of_sale/static/src/css/pos_receipts.css
@@ -85,7 +85,7 @@
     justify-items: end;
 }
 
-.pos-receipt .orderlines {
+.pos-receipt-qty-per-price {
     /*rtl:ignore*/
     direction: ltr;
 }
